envs/digitalocean/db/service.pg.prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: production-postgres-clusterip
  namespace: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    cnpg.io/cluster: production-postgres
