envs/digitalocean/db/ingress.pg.prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
  labels:
    app: production-postgres-ingress
  name: production-postgres-ingress
  namespace: postgres
spec:
  ingressClassName: nginx
  rules:
    - host: pgprodkippra.sohnandsol.com
      http:
        paths:
          - backend:
              service:
                name: production-postgres-clusterip
                port:
                  name: https
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - pgprodkippra.sohnandsol.com
      secretName: postgres-production-tls-secret
